# envsafe

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  ruff.toml
src/envsafe/: __init__.py  cli.py  config.py  models.py  reporter.py  scanner.py
src/envsafe/scanners/: __init__.py  base.py  docker.py  env_example.py  gitignore.py  secrets.py  weak_credentials.py
tests/: conftest.py  test_cli.py  test_config.py  test_docker_scanner.py  test_env_example_scanner.py  test_gitignore_scanner.py  test_models.py  test_reporter.py  test_scanner.py  test_secrets_scanner.py  test_weak_credentials_scanner.py
